# bookkeeping

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  secrets.example.yaml
alembic/: env.py
alembic/versions/: 9111d65435ba_initial.py
conf.example/: alembic.ini  secrets.yaml  settings.yaml
src/: accounting.py  app.py  constants.py  error.py
src/models/: __init__.py  account.py  base.py  transaction.py  transfer.py
src/routes/: __init__.py  dependencies.py
src/routes/accounting/: dependencies.py  errors.py  route.py  service.py
src/routes/transfers/: service.py
src/schema/: __init__.py  account.py  full_transaction.py  full_transfer.py  misc.py  model.py  transaction.py  transfer.py
src/util/: __init__.py  string_util.py  typing_util.py
